Add NumberTool.toBoolean() method - fixes VELTOOLS-195