@@ -82,9 +82,9 @@ public class GenericToolsTests {
         assertEquals(disp,dateTool.format(date));
         assertEquals(disp2,dateTool.format("yyyy/MM/dd",date));
         /* test parsing */
-        assertEquals(new Integer(2007),dateTool.getYear(disp));
-        assertEquals(new Integer(0),dateTool.getMonth(disp));
-        assertEquals(new Integer(2),dateTool.getDay(disp));
+        assertEquals(Integer.valueOf(2007),dateTool.getYear(disp));
+        assertEquals(Integer.valueOf(0),dateTool.getMonth(disp));
+        assertEquals(Integer.valueOf(2),dateTool.getDay(disp));
     }
 
     public @Test void testEscapeTool() {
@@ -151,30 +151,33 @@ public class GenericToolsTests {
         assertNotNull(mathTool);
         assertEquals(1,mathTool.abs(-1));
         assertEquals(2,mathTool.add(1,1));
-        assertEquals(new Integer(3),mathTool.ceil(2.5));
+        assertEquals(Integer.valueOf(3),mathTool.ceil(2.5));
         assertEquals(4,mathTool.div(8,2));
-        assertEquals(new Integer(5),mathTool.floor(5.1));
+        assertEquals(Integer.valueOf(5),mathTool.floor(5.1));
         assertEquals(6,mathTool.getAverage(new long[] {5,6,7}));
         /* getTotal() watches the type of its first argument, so assertEquals needs a long */
         assertEquals(7L,mathTool.getTotal(new long[]{2, 2, 3}));
-        assertEquals(new Integer(8), mathTool.idiv(130, 16));
+        assertEquals(Integer.valueOf(8), mathTool.idiv(130, 16));
         assertEquals(9,mathTool.max(9,-10));
         assertEquals(10, mathTool.min(10, 20));
-        assertEquals(new Integer(11),mathTool.mod(37,13));
+        assertEquals(Integer.valueOf(11),mathTool.mod(37,13));
         assertEquals(12, mathTool.mul(3, 4));
-        assertEquals(new Integer(13),mathTool.round(12.8));
+        assertEquals(Integer.valueOf(13),mathTool.round(12.8));
         assertEquals(new Double(14.2),mathTool.roundTo(1,14.18));
         assertEquals(new Double(-5.0),mathTool.roundTo(2,-4.999));
         assertEquals(15,mathTool.sub(30,15));
         assertEquals(16, mathTool.pow(4, 2));
-        assertEquals(new Integer(17),mathTool.toInteger("17"));
+        assertEquals(Integer.valueOf(17),mathTool.toInteger("17"));
         assertEquals(new Double(18.1),mathTool.toDouble("18.1"));
     }
 
     public @Test void testNumberTool() {
         NumberTool numberTool = (NumberTool)toolbox.get("number");
         assertNotNull(numberTool);
-//        assertEquals()
+        assertEquals("17", numberTool.integer("17"));
+        assertEquals(14.2, numberTool.toNumber("#0.00", "14.20", Locale.ROOT));
+        assertEquals(Boolean.valueOf(true), numberTool.toBoolean("true"));
+
     }
 
     public @Test void testResourceTool() {
